--- a/public/pages/canvas.html
+++ b/public/pages/canvas.html
@@ -10,10 +10,17 @@
     <link rel="shortcut icon" href="/images/touch/touch-icon-57x57.png">
     <link rel="stylesheet" type="text/css" href="/dist/app.css" />
     <script src="/dist/modernizr-custom.js"></script>
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
   </head>
-  <body>
+  <body class="canvasBody">
     {{{body}}}
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="/js/three.js"></script>
+	<script src="/js/Projector.js"></script>
+    <script src="/js/CanvasRenderer.js"></script>
     <script src="/dist/app.js"></script>
+
   </body>
 </html>
+ 
+
+    
