--- a/public/pages/newProject.html
+++ b/public/pages/newProject.html
@@ -12,10 +12,11 @@
     <link rel="shortcut icon" href="/images/touch/touch-icon-57x57.png">
     <link rel="stylesheet" type="text/css" href="/dist/app.css" />
     <script src="/dist/modernizr-custom.js"></script>
+
   </head>
   <body>
     <script src="//d3js.org/d3.v3.min.js"></script>
-    <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="/dist/app.js"></script>
   </body>
 </html>
