--- a/public/pages/multimedia.html
+++ b/public/pages/multimedia.html
@@ -12,6 +12,7 @@
     <script src="/dist/modernizr-custom.js"></script>
   </head>
   <body>
+  <nav></nav>
   	<h1>Multimedia Examples</h1>
   	<section>
   		<h2>Html5 Video</h2>
@@ -27,6 +28,7 @@
   		</audio>
   	</section>
   	<h3><img src="/media/giphy.gif"></h3>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="/dist/app.js"></script>
   </body>
 </html>
